...
                            <constraint firstItem="JYJ-6r-4Cd" firstAttribute="centerX" secondItem="k9s-9L-rzz" secondAttribute="centerX" id="Mxr-tA-uJH"/>
                            <constraint firstItem="bDu-1T-d1m" firstAttribute="trailing" secondItem="vFp-rF-NKR" secondAttribute="trailing" id="ZB8-rw-JgI"/>
                            <constraint firstItem="bDu-1T-d1m" firstAttribute="leading" secondItem="vFp-rF-NKR" secondAttribute="leading" id="ghp-9B-vVd"/>
                            <constraint firstItem="bDu-1T-d1m" firstAttribute="top" secondItem="vFp-rF-NKR" secondAttribute="top" id="s5R-rg-Yu4"/>
                        </constraints>
                    </view>
                    <navigationItem key="navigationItem" title="Active" largeTitleDisplayMode="always" id="lFM-UP-Zq0">
                        <barButtonItem key="rightBarButtonItem" systemItem="add" id="ddT-Yd-Gtx">
                            <connections>
                                <segue destination="mje-75-HnU" kind="show" id="nIn-wW-bk2"/>
                            </connections>
                        </barButtonItem>
                    </navigationItem>
...
                                                <fontDescription key="fontDescription" type="system" weight="semibold" pointSize="17"/>
                                                <nil key="textColor"/>
                                                <nil key="highlightedColor"/>
                                            </label>
                                            <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Title..." textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="ST0-Oi-4no">
                                                <rect key="frame" x="20" y="45" width="375" height="34"/>
                                                <accessibility key="accessibilityConfiguration" identifier="titleTF"/>
                                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                                <textInputTraits key="textInputTraits"/>
                                            </textField>
                                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Content:" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Q87-JJ-RP0">
                                                <rect key="frame" x="20" y="87" width="374" height="21"/>
                                                <fontDescription key="fontDescription" type="system" weight="semibold" pointSize="17"/>
                                                <nil key="textColor"/>
                                                <nil key="highlightedColor"/>
                                            </label>
                                            <textView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" textAlignment="natural" translatesAutoresizingMaskIntoConstraints="NO" id="4Na-Xs-uvw">
                                                <rect key="frame" x="20" y="116" width="374" height="127"/>
                                                <color key="backgroundColor" red="0.92143100499999997" green="0.92145264149999995" blue="0.92144101860000005" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                                <accessibility key="accessibilityConfiguration" identifier="contentTV"/>
                                                <constraints>
                                                    <constraint firstAttribute="height" constant="127" id="qOd-Ez-gQ2"/>
                                                </constraints>
                                                <color key="textColor" systemColor="labelColor"/>
                                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                                <textInputTraits key="textInputTraits" autocapitalizationType="sentences"/>
...
                            <constraint firstItem="HID-7G-UEs" firstAttribute="bottom" secondItem="588-D2-o6M" secondAttribute="bottom" id="57g-QF-ELk"/>
                            <constraint firstItem="HID-7G-UEs" firstAttribute="top" secondItem="588-D2-o6M" secondAttribute="top" id="br4-hp-tpk"/>
                            <constraint firstItem="HID-7G-UEs" firstAttribute="leading" secondItem="588-D2-o6M" secondAttribute="leading" id="qCx-hs-PgL"/>
                            <constraint firstItem="HID-7G-UEs" firstAttribute="trailing" secondItem="588-D2-o6M" secondAttribute="trailing" id="wqN-DL-9pv"/>
                        </constraints>
                    </view>
                    <navigationItem key="navigationItem" title="Add new" largeTitleDisplayMode="never" id="mou-VX-RuU">
                        <barButtonItem key="rightBarButtonItem" systemItem="done" id="fzE-7U-b01">
                            <connections>
                                <action selector="btnDoneTapped:" destination="mje-75-HnU" id="j0D-Uq-g80"/>
                            </connections>
                        </barButtonItem>
                    </navigationItem>
...
